Fix search on mobile

--- a/src/styles/components/list-backgrounds.scss
+++ b/src/styles/components/list-backgrounds.scss
@@ -47,7 +47,7 @@
         }
       }
 
-      @media screen and (max-width: ($tablet / 2)) {
+      @media screen and (max-width: ($mobile)) {
         width: calc(100% - 1em);
 
         &:nth-child(1n) {
